--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-
-<!doctype>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>purescript-react-explore</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
   <div id="example"></div>
